--- a/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
@@ -11,7 +11,7 @@
             <dl class="item">
                 <dt>
                     <a href="<?php echo $_product->getProductUrl() ?>">
-                        <img width="180" height="240" alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
+                        <img alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
                     </a>
                 </dt>
                 <dd>
