--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -455,8 +455,19 @@
         .home_product{
             dl{
                 width:16.6%;
+                height:auto;
+                padding:0 3px;
                 dt{
                     margin:0 auto 5px;
+                    width:100%;
+                    height:auto;
+                    a{
+                      width:100%;
+                      img{
+                        max-width:100%;
+                        max-height:none;
+                      }
+                    }
                 }
             }
         }
