--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -354,10 +354,10 @@
         });
 
 
-        jQuery('dl[data-title="Time"] input-text , .jCalcontainer').mouseover(function(){
+        jQuery('dl[data-title="Time"] .input-text , .jCalcontainer').mouseover(function(){
             jQuery('.jCalcontainer').show();
         });
-        jQuery('dl[data-title="Time"] input-text , .jCalcontainer').mouseout(function(){
+        jQuery('dl[data-title="Time"] .input-text , .jCalcontainer').mouseout(function(){
             jQuery('.jCalcontainer').hide();
         });
 
