--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -146,6 +146,10 @@
                             float: right;
                             clear: both;
                         }
+
+                        .input-box[data-title="Time"]{
+                            display:inline-block;
+                        }
                     }
 
                     .custom_size{
