--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2791,6 +2791,7 @@ tr.summary-details-excluded { font-style: italic; }
 .page .product-view .product-shop .new-product-options dl dd select + a:hover { color: #f39; }
 .page .product-view .product-shop .new-product-options dl dd select.product-custom-option { background-image: url(../images/commont/kai.jpg); background-repeat: no-repeat; background-position: 180px center; }
 .page .product-view .product-shop .new-product-options dl dd p.required { float: right; clear: both; }
+.page .product-view .product-shop .new-product-options dl dd .input-box[data-title="Time"] { display: inline-block; }
 .page .product-view .product-shop .new-product-options dl .custom_size { border: 1px solid #ccc; padding: 0 15px 15px; position: relative; margin: 15px 0; }
 .page .product-view .product-shop .new-product-options dl .Custom_made { border-left: 1px solid #ddd; border-right: 1px solid #ddd; padding: 10px 25px; }
 .page .product-view .product-shop .new-product-options dl .Custom_made:first-of-type { margin-top: 15px; border-top: 1px solid #ddd; }
