--- a/app/design/frontend/pc/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/view.phtml
@@ -149,7 +149,7 @@ $cur_cat_pro_size = Mage::getSingleton('catalog/layer')->getProductCollection()-
 
 
 
-    <?php
+<?php
     $_reviewsCollection = Mage::getModel('review/review')->getCollection()
         ->addStoreFilter(Mage::app()->getStore()->getId())
         ->addStatusFilter(Mage_Review_Model_Review::STATUS_APPROVED)
@@ -171,79 +171,86 @@ $cur_cat_pro_size = Mage::getSingleton('catalog/layer')->getProductCollection()-
         )
         ->setDateOrder();
     $_reviews_items =  $_reviewsCollection->getItems();
-    ?>
-    <?php if(count($_reviews_items) > 0): ?>
-        <div class="box_shadow">
-            <div class="category_name_bottom">
-                <h3><?php echo $cur_cat_name ?> reviews </h3>
-                <span>(<?php echo count($_reviews_items);?>)</span>
-            </div>
-            <div class="user_photos">
-                <div class="photos_title">User Photos</div>
-                <div class="home_review owl-carousel">
-                    <?php $review_30 = 0;?>
-                    <?php foreach($_reviews_items as $review): ?>
-                        <?php
-                        $show = 0;
-                        if( $review_30 < 30 ){
-                            $show = 1;
-                        }else{
-                            break;
-                        }
-                        $getAllChildren = Mage::registry('current_category')->getAllChildren();
-                        $getAllChildren_arr = explode(',',$getAllChildren);
 
-                        $review_product = Mage::getModel('catalog/product')
-                            ->setStoreId(Mage::app()->getStore()->getId())
-                            ->load($review->getEntityPkValue());
-                        $getCategoryIds = $review_product->getCategoryIds();
-                        $show = false;
-                        foreach($getCategoryIds as $in_cat_id){
-                            if( in_array($in_cat_id , $getAllChildren_arr) ){
-                                $show = 1;
-                                $review_30++;
-                                break;
-                            }
-                        }
-                        if(!$show){
-                            break;
-                        }
-                        ?>
-                        <?php if($review->getEntityPkValue() )?>
-                            <a class="item" href="<?php echo $this->getUrl().$review_product->getUrlPath();?>#review">
-                            <?php if(  $review->getReviewimage1()  ):?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage1();?>);"></span>
-                            <?php elseif(  $review->getReviewimage2()  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage2();?>);"></span>
-                            <?php elseif(  $review->getReviewimage3()  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage3();?>);"></span>
-                            <?php elseif(  $review->getReviewimage4()  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage4();?>);"></span>
-                            <?php elseif(  $review->getReviewimage5()  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage5();?>);"></span>
-                            <?php endif;?>
-                        </a>
-                    <?php endforeach; ?>
-                </div>
-                <script>
-                    jQuery(document).ready(function(){
-                        jQuery('.home_review').each(function() {
-                            if(jQuery('.item', this).length > 1) {
-                                jQuery(this).owlCarousel({
-                                    loop: true,
-                                    nav: true,
-                                    dots: false,
-                                    autoWidth:true,
-                                    margin:10,
-                                    autoplay: false
-                                });
-                            }
-                        });
-                    });
-                </script>
-            </div>
+    $review_30 = 0;
+    $reviews_list='';
+    if(count($_reviews_items) > 0){
+        foreach($_reviews_items as $review){
+            $show = false;
+            if( $review_30 < 30 ){
+                $show = true;
+            }else{
+                break;
+            }
+
+            $CurrentCategoryId = $this->getCurrentCategory()->getId();
+            $review_product = Mage::getModel('catalog/product')
+                ->setStoreId(Mage::app()->getStore()->getId())
+                ->load($review->getEntityPkValue());
+            $getCategoryIds = $review_product->getCategoryIds();
+            foreach($getCategoryIds as $in_cat_id){
+                if( $in_cat_id == $CurrentCategoryId ){
+                    $show = true;
+                    $review_30++;
+                    break;
+                }
+            }
+            if(!$show){break;}
+
+            if($review->getEntityPkValue() ){
+                $reviews_list .= '<a class="item" href="'.$this->getUrl().$review_product->getUrlPath().'#review">';
+                if(  $review->getReviewimage1()  ){
+                    $reviews_list .= '<span style="background-image:url('.Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage1().');"></span>';
+                }elseif(  $review->getReviewimage2()  ){
+                    $reviews_list .= '<span style="background-image:url('.Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage2().');"></span>';
+                }elseif(  $review->getReviewimage3()  ){
+                    $reviews_list .= '<span style="background-image:url('.Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage3().');"></span>';
+                }elseif(  $review->getReviewimage4()  ){
+                    $reviews_list .= '<span style="background-image:url('.Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage4().');"></span>';
+                }elseif(  $review->getReviewimage5()  ){
+                    $reviews_list .= '<span style="background-image:url('.Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage5().');"></span>';
+                }
+                $reviews_list .= '</a>';
+            }
+
+        }
+    }
+?>
+<?php if($review_30):?>
+    <div class="box_shadow">
+        <div class="category_name_bottom">
+            <h3><?php echo $cur_cat_name ?> reviews </h3>
+            <span>(<?php echo $review_30;?>)</span>
         </div>
-    <?php endif; ?>
+        <div class="user_photos">
+            <div class="photos_title">User Photos</div>
+            <div class="home_review owl-carousel">
+                <?php echo $reviews_list;?>
+            </div>
+            <script>
+                jQuery(document).ready(function(){
+                    jQuery('.home_review').each(function() {
+                        if(jQuery('.item', this).length > 1) {
+                            jQuery(this).owlCarousel({
+                                loop: true,
+                                nav: true,
+                                dots: false,
+                                autoWidth:true,
+                                margin:10,
+                                autoplay: false
+                            });
+                        }
+                    });
+                });
+            </script>
+        </div>
+    </div>
+<?php endif?>
+
+
+
+
+
 
 
 
