--- a/app/design/frontend/pc/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/view.phtml
@@ -211,7 +211,7 @@ $cur_cat_pro_size = Mage::getSingleton('catalog/layer')->getProductCollection()-
     <div class="box_shadow">
         <div class="category_name_bottom">
             <h3><?php echo $cur_cat_name ?> reviews </h3>
-            <span>(<?php echo $review_30;?>)</span>
+            <span>(<?php echo count($_reviews_items);?>)</span>
         </div>
         <div class="user_photos">
             <div class="photos_title">User Photos</div>
