--- a/app/design/frontend/pc/default/template/review/list.phtml
+++ b/app/design/frontend/pc/default/template/review/list.phtml
@@ -31,23 +31,23 @@
                             <?php if(Mage::helper("reviewimage")->getActive() == '1'):?>
 
                                 <?php if($_review->getReviewimage1()):?>
-                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$_review->getReviewimage1();?>);"></span>
+                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$_review->getReviewimage1();?>);"></span>
                                 <?php endif;?>
 
                                 <?php if($_review->getReviewimage2()):?>
-                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$_review->getReviewimage2();?>);"></span>
+                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$_review->getReviewimage2();?>);"></span>
                                 <?php endif;?>
 
                                 <?php if($_review->getReviewimage3()):?>
-                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$_review->getReviewimage3();?>);"></span>
+                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$_review->getReviewimage3();?>);"></span>
                                 <?php endif;?>
 
                                 <?php if($_review->getReviewimage4()):?>
-                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$_review->getReviewimage4();?>);"></span>
+                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$_review->getReviewimage4();?>);"></span>
                                 <?php endif;?>
 
                                 <?php if($_review->getReviewimage5()):?>
-                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$_review->getReviewimage5();?>);"></span>
+                                    <span class="item" style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$_review->getReviewimage5();?>);"></span>
                                 <?php endif;?>
 
                             <?php endif;?>
