--- a/app/design/frontend/pc/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/view.phtml
@@ -207,15 +207,15 @@ $cur_cat_pro_size = Mage::getSingleton('catalog/layer')->getProductCollection()-
                         ?>
                         <a class="item" href="<?php echo $this->getUrl().$review_product->getUrlPath();?>#review">
                             <?php if(  $review['reviewimage1']  ):?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review['reviewimage1'];?>);"></span>
+                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$review['reviewimage1'];?>);"></span>
                             <?php elseif(  $review['reviewimage2']  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review['reviewimage2'];?>);"></span>
+                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$review['reviewimage2'];?>);"></span>
                             <?php elseif(  $review['reviewimage3']  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review['reviewimage3'];?>);"></span>
+                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$review['reviewimage3'];?>);"></span>
                             <?php elseif(  $review['reviewimage4']  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review['reviewimage4'];?>);"></span>
+                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$review['reviewimage4'];?>);"></span>
                             <?php elseif(  $review['reviewimage5']  ): ?>
-                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review['reviewimage5'];?>);"></span>
+                                <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages'.$review['reviewimage5'];?>);"></span>
                             <?php endif;?>
                         </a>
                     <?php endif;?>
