--- a/app/design/frontend/pc/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list.phtml
@@ -1,5 +1,5 @@
 <?php
-    $_productCollection=$this->getLoadedProductCollection()->addAttributeToSort('entity_id', 'desc');
+    $_productCollection=$this->getLoadedProductCollection();
     $_helper = $this->helper('catalog/output');
 ?>
 
