--- a/app/design/frontend/pc/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list.phtml
@@ -98,7 +98,10 @@
 
 
 
-        <?php $i=0; foreach ($_productCollection as $_product):?>
+        <?php
+            $i=0;
+            Mage::log( $_productCollection->getSelectSql(true) );
+            foreach ($_productCollection as $_product):?>
             <?php if ($i++%$_columnCount==0): ?>
             <ul class="products-grid">
             <?php endif ?>
