--- a/app/design/frontend/pc/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list.phtml
@@ -100,8 +100,16 @@
 
         <?php
             $i=0;
+
+        if(isset($_GET['test']) && $_GET['test']){
             Mage::log( $_productCollection->getSelectSql(true) ,null,"amy.log" );
-            foreach ($_productCollection as $_product):?>
+        }
+
+            foreach ($_productCollection as $_product):
+                if(isset($_GET['test']) && $_GET['test']){
+                    Mage::log( $_product->getId() ,null,"amy.log" );
+                }
+                ?>
             <?php if ($i++%$_columnCount==0): ?>
             <ul class="products-grid">
             <?php endif ?>
