--- a/app/design/frontend/pc/default/template/catalog/navigation/left.phtml
+++ b/app/design/frontend/pc/default/template/catalog/navigation/left.phtml
@@ -14,6 +14,8 @@
 
     if($_count>8){
         $rand_cat = array_rand($_categories->toArray(),8);
+    }else{
+        $rand_cat = $_categories->toArray();
     }
 ?>
 
