--- a/app/design/frontend/pc/default/template/catalog/product/list/pager.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list/pager.phtml
@@ -1,59 +1,68 @@
 <?php if($this->getCollection()->getSize()): ?>
-
     <?php if($this->getLastPageNum()>1): ?>
-        <?php $p_request = $this->getRequest()->getParam('p')?>
-
-    <div class="pagination">
-
-        <ol>
-
-        <?php if (!$this->isFirstPage()): ?>
-            <li>
-                <a class="previous<?php if(!$this->getAnchorTextForPrevious()): ?> i-previous<?php endif;?>" href="<?php echo $this->getPreviousPageUrl() ?>">
-                    <?php echo $this->getAnchorTextForPrevious() ?>
-                </a>
-            </li>
-        <?php endif;?>
 
 
-        <?php if ($p_request && $p_request>5): ?>
-            <li><a class="first" href="<?php echo $this->getFirstPageUrl() ?>">1</a></li>
-            <li><a class="previous_jump" title="" href="<?php echo $this->getPreviousJumpUrl() ?>">...</a></li>
-        <?php endif?>
+        <?php
+        $p_request = $this->getRequest()->getParam('p');
+        $p_request = $p_request?$p_request:1;
+        $p_array = $this->getFramePages();
+        ?>
 
+        <div class="pagination">
 
+            <ol>
 
+            <?php if (!$this->isFirstPage()): ?>
+                <li>
+                    <a class="previous<?php if(!$this->getAnchorTextForPrevious()): ?> i-previous<?php endif;?>" href="<?php echo $this->getPreviousPageUrl() ?>">
+                        <?php echo $this->getAnchorTextForPrevious() ?>
+                    </a>
+                </li>
 
-
-        <?php foreach ($this->getFramePages() as $_page): ?>
-            <?php if ($this->isPageCurrent($_page)): ?>
-                <li class="current"><?php echo $_page ?></li>
-            <?php else: ?>
-                <li><a href="<?php echo $this->getPageUrl($_page) ?>"><?php echo $_page ?></a></li>
             <?php endif;?>
-        <?php endforeach;?>
-
-
-        <?php if ($p_request && $p_request<$this->getLastPageNum()-3): ?>
-            <li><a class="next_jump" title="" href="<?php echo $this->getNextJumpUrl() ?>">...</a></li>
-            <li><a class="last" href="<?php echo $this->getLastPageUrl() ?>"><?php echo $this->getLastPageNum() ?></a></li>
-        <?php endif;?>
-
-
-        <?php if (!$this->isLastPage()): ?>
-            <li>
-                <a class="next<?php if(!$this->getAnchorTextForNext()): ?> i-next<?php endif; ?>" href="<?php echo $this->getNextPageUrl() ?>">
-                    <?php echo $this->getAnchorTextForNext() ?>
-                </a>
-            </li>
-        <?php endif;?>
 
 
 
-        </ol>
+            <?php if ($p_request && $p_request>3): ?>
+                <li><a href="<?php echo $this->getFirstPageUrl() ?>">1</a></li>
+                <li><a href="<?php echo $this->getPageUrl($p_array[0]-1) ?>">...</a></li>
+            <?php endif?>
 
-    </div>
+
+
+
+
+            <?php foreach ($this->getFramePages() as $_page): ?>
+                <?php if ($this->isPageCurrent($_page)): ?>
+                    <li class="current"><?php echo $_page ?></li>
+                <?php else: ?>
+                    <li><a href="<?php echo $this->getPageUrl($_page) ?>"><?php echo $_page ?></a></li>
+                <?php endif;?>
+            <?php endforeach;?>
+
+
+            <?php if ($p_request && $p_request<$this->getLastPageNum()-3): ?>
+                <li><a href="<?php echo $this->getPageUrl($p_array[count($p_array)-1]+1) ?>">...</a></li>
+                <li><a href="<?php echo $this->getLastPageUrl() ?>"><?php echo $this->getLastPageNum() ?></a></li>
+            <?php endif;?>
+
+
+            <?php if (!$this->isLastPage()): ?>
+                <li>
+                    <a class="next<?php if(!$this->getAnchorTextForNext()): ?> i-next<?php endif; ?>" href="<?php echo $this->getNextPageUrl() ?>">
+                        <?php echo $this->getAnchorTextForNext() ?>
+                    </a>
+                </li>
+            <?php endif;?>
+
+
+
+            </ol>
+
+        </div>
+
+
+
+
     <?php endif; ?>
-
-
 <?php endif ?>
