--- a/app/design/frontend/pc/default/template/page/html/header.phtml
+++ b/app/design/frontend/pc/default/template/page/html/header.phtml
@@ -41,7 +41,7 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a rel="nofollow" href="<?php echo $this->getUrl('help')?>">Help</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a class="CustomerService_a" href="<?php echo $this->getUrl('customer_service')?>">Customer Service</a>
+                <a class="CustomerService_a" href="javascript:;">Customer Service</a>
                 <div class="CustomerService">
                     <div class="and"></div>
                     <p>
