--- a/app/design/frontend/pc/default/template/helpcenter/left.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/left.phtml
@@ -18,7 +18,7 @@
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('customs-and-import-tax')?>">Customs and Import Tax</a></dd>
 </dl>
 <dl>
-    <dt>Refund & return</dt>
+    <dt>REFUND & RETURN</dt>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('return-and-exchange-policy')?>">Return and Exchange Policy</a></dd>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('cancel-order')?>">Cancel Order</a></dd>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('contact-us')?>">Contact US</a></dd>
