viewed loop false

--- a/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
@@ -36,7 +36,7 @@
                 jQuery('.recenty_viewed').each(function() {
                     if(jQuery('.item', this).length > 0) {
                         jQuery(this).owlCarousel({
-                            loop: true,
+                            loop: false,
                             nav: true,
                             dots:false,
                             autoWidth:true,
