--- a/app/design/frontend/pc/default/template/helpcenter/color-chart.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/color-chart.phtml
@@ -1,7 +1,6 @@
 <div class="help_right">
     <p style="MARGIN-BOTTOM: 0px; border-top: none;" class="dressp">
-        Color chart for all dresses at beformal.com.au
-    </p>
+        Color chart for all dresses at D-aydress.com    </p>
     <p class="wedp">
         Considering the difference of lighting and the display of monitor, the color you see from computer may be kind of different from that of the item you received. The actual color should be the color of item you received.
     </p>
