--- a/app/design/frontend/pc/default/template/helpcenter/faq.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/faq.phtml
@@ -1,4 +1,4 @@
-<div class="help_right"><p><span style="font-size: medium;"><strong>FAQ</strong></span></p>
+﻿<div class="help_right"><p><span style="font-size: medium;"><strong>FAQ</strong></span></p>
     <p>1. Will I be required to pay import duty?</p>
     <p>Most of the countries do not charge import duty on low volume personal imports.</p>
     <p>2.Can I get a dress with extra length?</p>
@@ -20,23 +20,23 @@
     <p>An oxidation spot can occur when a substance that was not properly cleaned on the dress oxidizes and turns brown. This can happen even if your dress has been cleaned as dry-cleaning solvents do not remove all substances. Spills from clear soda or wine may go unnoticed at the time of the initial cleaning. Unless these spills are pretreated, it is likely they will oxidize over time. Inspecting preserved dresses periodically ensures the dress remains in the best condition. The sooner an oxidized stain is caught, the more likely it will be able to be removed.</p>
     <p>Light and dust</p>
     <p>Keeping your dress well covered will protect it from the damage caused by light and dust.</p>
-    <p>4.Can I see the dress in other colors and Fabric Swatches?</p>
+    <p>5.Can I see the dress in other colors and Fabric Swatches?</p>
     <p>Unfortunately we are only allowed to send or post pictures provided to us by the manufacturers of the dresses we sell. Not all colors of the dresses are pictured by the manufacturers and therefore all the pictures you see are the only ones we have available. Only thing you can try to do is find another dress called the same color and it will be the same depending on the fabric.</p>
     <p>Swatches for all fabrics are available directly to you through our online store, you can contact our customer service about how to order swatches.</p>
     <p>&nbsp;</p>
     <p>6.What if my dress is not available?</p>
     <p>If your dress is not in stock and for some reason we cannot order it , we will notify you and give you other options to choose from, or you can cancel your order. You can provide other of your favorite dress style pictures, and after confirmation, we will reply you as soon as possible.</p>
     <p>7.How do I use the search option of your site?</p>
-    <p>11.Is the information I send over the Internet safe?</p>
+    <p>8.Is the information I send over the Internet safe?</p>
     <p>All the information you send over our website is strictly confidential and is protected by our SSL certified web site through the industry's most powerful encryption VeriSign. Any other information given such as email is strictly confidential and will not be used or given to any 3rd party. Please see our Privacy Policy for more information.</p>
-    <p>8.Is this dress available and when will I receive it?</p>
+    <p>9.Is this dress available and when will I receive it?</p>
     <p>Inventory moves very quickly especially during prom season so we are not able to accurately check stock on a particular dress. We are not able to confirm shipping date until the order is placed for a dress. The website is updated with as much information as we have available including if a dress won't be shipping out until a later date.</p>
-    <p>9.Are you an online bridal store only?</p>
+    <p>10.Are you an online bridal store only?</p>
     <p>Yes, all our business is done online, and we do not operate any retail bridal store.</p>
-    <p>10.How far in advance should I order a dress before wedding?</p>
+    <p>11.How far in advance should I order a dress before wedding?</p>
     <p>Please place your order at your earliest convenience. Normally, placing the order can't be less than 1 month in advance of your wedding ceremony. We also afford you a comfortable time frame to accommodate any alteration if necessary.</p>
-    <p>11.How do I place my order in this website?</p>
+    <p>12.How do I place my order in this website?</p>
     <p>You can view the catalog in our website. If you find anything you want to buy, please add it to your shopping cart and then go check out.</p>
-    <p>12.Will my dress exactly match the color on website?</p>
+    <p>13.Will my dress exactly match the color on website?</p>
     <p>Due to the computer monitor’s display settings, there might be a slight difference between the actual dress’ color and what you see on the picture. Slight color mismatches between the color of your dress and the color shown on screen may not mean that the dress is defective or mis-shipped.</p>
     <p>&nbsp;</p></div>
