--- a/app/design/frontend/pc/default/template/helpcenter/contact-us.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/contact-us.phtml
@@ -1,3 +1,3 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Contact US</strong></span></p>
-    <p>Email:&nbsp;313399524@qq.com<br> <br> Office Hours: Monday to Friday-9:00 AM to 6:00 PM (GMT +08:00)</p>
-    <p>For general information, such as buying process, payment methods, delivery options or dispute process, please refer to our related page.<br> If you need any inquiries with your recent orders, please contact Customer Service Center at 313399524@qq.com.</p></div>
+    <p>Email:&nbsp;ddaydress@aol.com<br> <br> Office Hours: Monday to Friday-9:00 AM to 6:00 PM (GMT +08:00)</p>
+    <p>For general information, such as buying process, payment methods, delivery options or dispute process, please refer to our related page.<br> If you need any inquiries with your recent orders, please contact Customer Service Center at ddaydress@aol.com.</p></div>
