--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -354,17 +354,21 @@
         });
 
 
+        //pc端
         jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').mouseover(function(){
             jQuery('.jCalcontainer').show();
         });
         jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').mouseout(function(){
             jQuery('.jCalcontainer').hide();
         });
+
+        //手机端
         if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
-            jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').touchstart(function(){
+            jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').bind("touchstart",function(){
                 jQuery('.jCalcontainer').show();
             });
-            jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').touchend(function(){
+
+            jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').bind("click",function(){
                 jQuery('.jCalcontainer').hide();
             });
         }
