--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -364,12 +364,8 @@
 
         //手机端
         if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
-            jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').bind("touchstart",function(){
-                jQuery('.jCalcontainer').show();
-            });
-
             jQuery('dl[data-title="Time"] .input-box , .jCalcontainer').bind("click",function(){
-                jQuery('.jCalcontainer').hide();
+                jQuery('.jCalcontainer').toggle();
             });
         }
 
