--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -379,7 +379,7 @@
             }
             jQuery('.input-box[data-title="Time For Admin"] select').find('option[value="'+timeforadmin_value+'"]').prop('selected',true);
             jQuery('.input-box[data-title="Time For Admin"] select').trigger("change");
-            jQuery('.jCalcontainer').hide();
+            //jQuery('.jCalcontainer').hide();
         });
 
 
