--- a/app/design/frontend/pc/default/template/page/html/footer.phtml
+++ b/app/design/frontend/pc/default/template/page/html/footer.phtml
@@ -8,7 +8,7 @@
                 <li class="mini-pinterest"><a href="https://www.pinterest.com/ddaydress/"></a></li>
                 <li class="mini-youtube"><a href="https://www.youtube.com/channel/UCFXTTCjX3wrvgJMYiqwZXew"></a></li>
                 <li class="mini-twitter"><a href="https://twitter.com/ddaydress"></a></li>
-                <li class="mini-tumbler"><a href="https://www.tumblr.com/blog/ddaydress"></a></li>
+                <li class="mini-tumbler"><a href="http://d-daydress.tumblr.com/"></a></li>
                 <li class="mini-blog"><a href="http://ddaydresscoupon.blogspot.com/"></a></li>
                 <li class="mini-vk"><a href="http://new.vk.com/ddaydress"></a></li>
             </ul>
